--- a/ArduinoNanoEsp8266WiFiLEDstrip/ColorPicker.html
+++ b/ArduinoNanoEsp8266WiFiLEDstrip/ColorPicker.html
@@ -22,13 +22,13 @@ of the RGB-LED
 	<input type="color" name="rgb" onchange="this.form.submit()"><BR>
 </form>
 <form method="get">
-    <input type="submit" value="FF0000" name="rgb" id="button_red"></input>
-	<input type="submit" value="00FF00" name="rgb" id="button_gre"></input><br/>
-	<input type="submit" value="0000FF" name="rgb" id="button_blu"></input>
-	<input type="submit" value="FFFF00" name="rgb" id="button_yel"></input><br/>
-	<input type="submit" value="FF00FF" name="rgb" id="button_xxx"></input>
-	<input type="submit" value="00FFFF" name="rgb" id="button_yyy"></input><br/>	
-	<input type="submit" value="FFFFFF" name="rgb" id="button_zzz"></input>	
+    <input type="submit" value="%ff0000" name="rgb" id="button_red"></input>
+	<input type="submit" value="%00ff00" name="rgb" id="button_gre"></input><br/>
+	<input type="submit" value="%0000ff" name="rgb" id="button_blu"></input>
+	<input type="submit" value="%ffff00" name="rgb" id="button_yel"></input><br/>
+	<input type="submit" value="%ff00ff" name="rgb" id="button_xxx"></input>
+	<input type="submit" value="%00ffff" name="rgb" id="button_yyy"></input><br/>	
+	<input type="submit" value="%ffffff" name="rgb" id="button_zzz"></input>	
 </form>
 <BR>
 <HR>
